add proxy and env files

--- a/react-app-with-webpack/package.json
+++ b/react-app-with-webpack/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "^18.0.4",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.4.5",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^7.0.0",
@@ -33,11 +33,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@aemforms/af-custom-functions": "^1.0.8",
     "@aemforms/af-canvas-theme": "^1.0.27",
     "@aemforms/af-core": "^0.22.94",
+    "@aemforms/af-custom-functions": "^1.0.8",
     "@aemforms/af-react-renderer": "^0.22.94",
     "@aemforms/af-react-vanilla-components": "^1.0.19",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intl": "^5.8.4",
