--- a/react-app-with-material-ui-components/package.json
+++ b/react-app-with-material-ui-components/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
