--- a/react-app-with-nextjs/package.json
+++ b/react-app-with-nextjs/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next dev",
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
+    "next-http-proxy-middleware": "^1.2.6",
     "react": "^18",
     "react-dom": "^18"
   },
