update env file

--- a/basic-react-app/.env
+++ b/basic-react-app/.env
@@ -1,10 +1,10 @@
 # AEM url
-REACT_APP_AEM_HOST=http://localhost:4502/
+REACT_APP_AEM_HOST=https://publish-p107752-e251649-cmstg.adobeaemcloud.com/
 
 # Adaptive form path
-REACT_APP_AEM_FORM_PATH=basic-react-app
+REACT_APP_AEM_FORM_PATH=code-sandbox/basic-react-app
 
-REACT_APP_USE_PROXY=true
+REACT_APP_USE_PROXY=false
 
 # For Basic auth, use AEM ['user','pass'] pair (eg for Local AEM Author instance)
 REACT_APP_AEM_AUTH_USER=admin
