add express server

--- a/basic-react-app/.env
+++ b/basic-react-app/.env
@@ -1,10 +1,17 @@
 # AEM url
-REACT_APP_AEM_HOST=https://publish-p107752-e251649-cmstg.adobeaemcloud.com/
+REACT_APP_AEM_HOST=http://localhost:4502/
 
 # Adaptive form path
-REACT_APP_AEM_FORM_PATH=code-sandbox/basic-react-app
+REACT_APP_AEM_FORM_PATH=angular
 
-REACT_APP_USE_PROXY=false
+# true - Enable proxy to set authorization, false - not set authorization in the header
+REACT_APP_USE_PROXY=true
+
+# Fetch data from AEM
+REACT_APP_FETCH_FROM_AEM=true
+
+# Local server port for proxy
+REACT_APP_SERVER_PORT=5010
 
 # For Basic auth, use AEM ['user','pass'] pair (eg for Local AEM Author instance)
 REACT_APP_AEM_AUTH_USER=admin
