--- a/basic-react-app/.env
+++ b/basic-react-app/.env
@@ -10,7 +10,7 @@ REACT_APP_USE_PROXY=true
 # Fetch data from AEM
 REACT_APP_FETCH_FROM_AEM=true
 
-# Local server port for proxy
+# Express server port for proxy
 REACT_APP_SERVER_PORT=5010
 
 # For Basic auth, use AEM ['user','pass'] pair (eg for Local AEM Author instance)
