--- a/basic-react-app/package.json
+++ b/basic-react-app/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "client": "react-scripts start",
     "server": "nodemon server.js",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "npm run build && npm run server",
+    "start:both": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
