--- a/basic-react-apps/.env
+++ b/basic-react-apps/.env
@@ -1,17 +1,17 @@
 # AEM url
-REACT_APP_AEM_HOST=http://localhost:4502/
+REACT_APP_AEM_HOST=
 
 # Adaptive form path
-REACT_APP_AEM_FORM_PATH=angular
+REACT_APP_AEM_FORM_PATH=
 
 # true - Enable proxy to set authorization, false - not set authorization in the header
-REACT_APP_USE_PROXY=true
+REACT_APP_USE_PROXY=
 
-# Fetch data from AEM
-REACT_APP_FETCH_FROM_AEM=true
+# Fetch data from AEM or somewhere elese
+REACT_APP_FETCH_FROM_AEM=
 
-# Express server port for proxy
-REACT_APP_SERVER_PORT=5010
+# Auth token for local development, You can pass either auth token or USER and PASSWOED
+REACT_APP_AEM_AUTH_TOKEN=
 
 # For Basic auth, use AEM ['user','pass'] pair (eg for Local AEM Author instance)
 REACT_APP_AEM_AUTH_USER=admin
