--- a/basic-react-apps/package.json
+++ b/basic-react-apps/package.json
@@ -7,17 +7,13 @@
     "@aemforms/af-core": "^0.22.94",
     "@aemforms/af-react-renderer": "^0.22.94",
     "@aemforms/af-react-vanilla-components": "^1.0.19",
-    "@codesandbox/utils": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "client": "react-scripts start",
-    "server": "nodemon server.js",
-    "start": "npm run build && npm run server",
-    "start:both": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,11 +44,9 @@
     "@types/node": "^16.18.103",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^2.0.6",
-    "nodemon": "^3.1.4",
     "typescript": "^4.9.5"
   }
 }
